...
        Padding(
          padding: const EdgeInsets.symmetric(horizontal: 16),
          child: Row(
            mainAxisAlignment: MainAxisAlignment.center,
            children: [
              OutlinedButton(
                key: const Key('paymentDetail_button_cancel'),
                onPressed: () => context
                    .read<PaymentDetailBloc>()
                    .add(const PaymentDetailCancelTapped()),
                child: const Text('キャンセル'),
              ),
              const SizedBox(width: 16),
              ElevatedButton(
                key: const Key('paymentDetail_button_save'),
                onPressed: isSaving
                    ? null
                    : () => context
                        .read<PaymentDetailBloc>()
                        .add(const PaymentDetailSaveTapped()),
                child: isSaving
...
